force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Amount_INR_GBP__c.field-meta.xml
<CustomField>
    <fullName>Amount_INR_GBP__c</fullName>
    <formula>Unit_Price_INR_GBP__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount INR GBP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>