force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Date__c</fullName>
    <label>Indent Date</label>
    <type>Date</type>
</CustomField>