force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Doc_No__c</fullName>
    <label>Indent Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>