force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/HSN_SAC__c.field-meta.xml
<CustomField>
    <fullName>HSN_SAC__c</fullName>
    <label>HSN/SAC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>