force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/IGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate__c</fullName>
    <label>IGST Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>