force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Indent_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Indent_Quantity__c</fullName>
    <label>Indent Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>