force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Less_Discount_On__c.field-meta.xml
<CustomField>
    <fullName>Less_Discount_On__c</fullName>
    <label>Less Discount On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>