force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Product_part_No__c.field-meta.xml
<CustomField>
    <fullName>Product_part_No__c</fullName>
    <label>Product/part No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>