force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Purchase_Indent_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Indent_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Indent Line Item</label>
    <referenceTo>Purchase_Indent_Line_Item__c</referenceTo>
    <relationshipLabel>Purchase Order Line Items</relationshipLabel>
    <relationshipName>Purchase_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>