force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Purchase_Indent_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Indent_Quantity__c</fullName>
    <formula>Purchase_Indent_Line_Item__r.QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Indent Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>