force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Saleable_Stock__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Stock__c</fullName>
    <label>Saleable Stock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>