force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/SGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>SGST_Rate__c</fullName>
    <label>SGST Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>