force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>Part Serial #</label>
    <type>TextArea</type>
</CustomField>