force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Taxable_Value__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Value__c</fullName>
    <formula>Amount_INR_GBP__c - Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>