force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Unit_Price_INR_GBP__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_INR_GBP__c</fullName>
    <label>Unit Price (INR/GBP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>