force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/UOI__c.field-meta.xml
<CustomField>
    <fullName>UOI__c</fullName>
    <label>UOI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>DEF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>