force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/UOI_Text__c.field-meta.xml
<CustomField>
    <fullName>UOI_Text__c</fullName>
    <label>UOI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>